erDiagram
    PLATFORM ||--o{ XLSFORM_TEMPLATE : "owns (global)"
    TEAM ||--o{ XLSFORM_TEMPLATE : "owns (custom)"
    TEAM ||--o{ XLSFORM : "deploys"
    TEAM ||--o{ DATASET : "owns"
    TEAM ||--o{ LOCALE : "creates"
    TEAM ||--o{ ODK_PROJECT : "has"

    XLSFORM_TEMPLATE ||--o{ XLSFORM : "deployed as"
    XLSFORM_TEMPLATE ||--o{ XLSFORM_MODULE : "groups questions into"
    XLSFORM_TEMPLATE ||--o{ XLSFORM_TEMPLATE_SECTION : "schema tree"
    XLSFORM_TEMPLATE ||--o{ REQUIRED_MEDIA : "requires"

    XLSFORM_MODULE ||--o{ XLSFORM_MODULE_VERSION : "default + local versions"

    XLSFORM_MODULE_VERSION ||--o{ SURVEY_ROW : "contains"
    XLSFORM_MODULE_VERSION ||--o{ CHOICE_LIST : "contains"
    XLSFORM_MODULE_VERSION }o--o{ LOCALE : "translated into"
    XLSFORM_MODULE_VERSION }o--o{ XLSFORM : "selected by (pivot+order)"

    SURVEY_ROW }o--|| CHOICE_LIST : "select_one/select_multiple"
    CHOICE_LIST ||--o{ CHOICE_LIST_ENTRY : "has options"

    SURVEY_ROW ||--o{ LANGUAGE_STRING : "label/hint translations"
    CHOICE_LIST_ENTRY ||--o{ LANGUAGE_STRING : "label translations"
    LOCALE ||--o{ LANGUAGE_STRING : "in language"
    LANGUAGE ||--o{ LOCALE : "has locales"

    XLSFORM_TEMPLATE_SECTION }o--|| DATASET : "populates"
    DATASET ||--o{ DATASET_VARIABLE : "defines"
    DATASET ||--o{ ENTITY : "stores"
    DATASET }o--o{ DATASET : "parent/child"

    XLSFORM ||--o{ XLSFORM_VERSION : "draft + published"
    XLSFORM_VERSION ||--o{ SUBMISSION : "receives"
    SUBMISSION ||--o{ ENTITY : "produces"
    ENTITY ||--o{ ENTITY_VALUE : "has values"
    ENTITY_VALUE }o--|| DATASET_VARIABLE : "value of"
    ENTITY }o--o{ ENTITY : "parent/child (repeats)"

    ODK_PROJECT ||--o{ APP_USER : "has"
    APP_USER }o--o{ XLSFORM : "assigned to"
